# locus-photo

./: .gitattributes  .gitignore  .locus-photo-config.yaml  NOTICE  README.md  TERMS_OF_USE.txt  THIRD_PARTY_LICENSES.txt  locus-photo-installer.cmd  locus-photo-installer.sh  main.py  main.spec  pyproject.toml  requirements.txt
.github/workflows/: test.yml
tests/: test_app_coverage.py  test_backup_manager.py  test_config_and_image_loading.py  test_config_coverage.py  test_exiftool_wrapper.py  test_gps_operations_and_widgets.py  test_gps_operations_coverage.py  test_image_loading_coverage.py  test_mainapp_lifecycle.py  test_photo_grid_coverage.py  test_settings_and_pagination.py  test_theme_and_ui_mixins.py  test_tree_coverage.py  test_ui_geolocation.py  test_widgets_coverage.py
viewer/: app.py
viewer/core/: constants.py  enums.py  logging_config.py  utils.py
viewer/metadata/: backup_manager.py  exiftool_wrapper.py  gps_operations.py  image_container.py
viewer/mixins/: config.py  image_loading.py  photo_grid.py  settings.py  theme.py  tree.py  ui.py
viewer/ui/: dialogs.py  styling.py  widgets.py
